# async-lazy

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: actions.yml
src/: lib.rs
tests/: tests.rs
