[package]
name = "async-lazy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A value which is initialized on the first access, with an async function."
homepage = "https://github.com/Jules-Bertholet/async-lazy"
repository = "https://github.com/Jules-Bertholet/async-lazy"
keywords = ["async", "lazy", "static", "once-cell", "lazy-static"]
categories = ["asynchronous", "concurrency", "rust-patterns"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Required for const `Lazy` constructor
parking_lot = ["tokio/parking_lot"]
# Required for `IntoFuture` impls
nightly = []

[dependencies]
tokio = { version = "1.28.1", features = ["sync"] }

[dev-dependencies]
futures = "0.3.28"
tokio = { version = "1", features = ["full", "test-util"] }

[package.metadata.docs.rs]
all-features = true
