[package]
name = "async-lazy"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A value which is initialized on the first access, with an async function."
homepage = "https://github.com/Jules-Bertholet/async-lazy"
repository = "https://github.com/Jules-Bertholet/async-lazy"
keywords = ["async", "lazy", "static", "once-cell", "lazy-static"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[features]
# Deprecated, does nothing
parking_lot = []
# Required for `IntoFuture` impls
nightly = []

[dependencies]
tokio = { version = "1.43.0", features = ["sync"] }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1", features = ["full", "test-util"] }

[package.metadata.docs.rs]
all-features = true
